# zonarosa

./: .gitignore
libzonarosa/rust/bridge/ffi/: Cargo.toml  build.rs  cbindgen-testing.toml  cbindgen.toml
libzonarosa/rust/bridge/ffi/src/: error.rs  lib.rs  logging.rs
libzonarosa/rust/bridge/jni/: Cargo.toml  build.rs
libzonarosa/rust/bridge/jni/impl/: Cargo.toml  cbindgen.toml
libzonarosa/rust/bridge/jni/impl/src/: lib.rs  logging.rs
libzonarosa/rust/bridge/jni/src/: lib.rs
libzonarosa/rust/bridge/jni/testing/: Cargo.toml  cbindgen.toml
libzonarosa/rust/bridge/jni/testing/src/: lib.rs
libzonarosa/rust/bridge/node/: Cargo.toml  build.rs
libzonarosa/rust/bridge/node/futures/: Cargo.toml
libzonarosa/rust/bridge/node/futures/benches/: node.rs
libzonarosa/rust/bridge/node/futures/src/: exception.rs  executor.rs  future.rs  lib.rs  promise.rs  result.rs  util.rs
libzonarosa/rust/bridge/node/futures/src/future/: builder.rs
libzonarosa/rust/bridge/node/futures/tests/: node.rs  util.rs
libzonarosa/rust/bridge/node/futures/tests-node-module/: Cargo.toml
libzonarosa/rust/bridge/node/futures/tests-node-module/src/: lib.rs  panics_and_throws.rs  store_like.rs
libzonarosa/rust/bridge/node/futures/tests/node-tests/: bench.js  package-lock.json  package.json
libzonarosa/rust/bridge/node/src/: lib.rs  logging.rs
libzonarosa/rust/bridge/shared/: Cargo.toml  build.rs
libzonarosa/rust/bridge/shared/macros/: Cargo.toml
libzonarosa/rust/bridge/shared/macros/src/: ffi.rs  jni.rs  lib.rs  node.rs  util.rs
libzonarosa/rust/bridge/shared/src/: account_keys.rs  cds2.rs  crypto.rs  device_transfer.rs  hsm_enclave.rs  incremental_mac.rs  lib.rs  logging.rs  media.rs  message_backup.rs  net.rs  protocol.rs  sgx_session.rs  support.rs  svr2.rs  usernames.rs  zkgroup.rs
libzonarosa/rust/bridge/shared/src/net/: cdsi.rs  chat.rs  keytrans.rs  profiles.rs  registration.rs  svrb.rs  tokio.rs
libzonarosa/rust/bridge/shared/testing/: Cargo.toml  build.rs
libzonarosa/rust/bridge/shared/testing/src/: convert.rs  lib.rs  message_backup.rs  net.rs  net_env.rs  protocol.rs  types.rs
libzonarosa/rust/bridge/shared/testing/src/net/: chat.rs  keytrans.rs  registration.rs
libzonarosa/rust/bridge/shared/types/: Cargo.toml
libzonarosa/rust/bridge/shared/types/src/: cds2.rs  crypto.rs  hsm_enclave.rs  incremental_mac.rs  io.rs  lib.rs  message_backup.rs  net.rs  protocol.rs  sgx_session.rs  zkgroup.rs
libzonarosa/rust/bridge/shared/types/src/ffi/: chat.rs  convert.rs  error.rs  futures.rs  io.rs  mod.rs  storage.rs
libzonarosa/rust/bridge/shared/types/src/jni/: args.rs  call_method.rs  chat.rs  class_lookup.rs  convert.rs  error.rs  futures.rs  io.rs  mod.rs  storage.rs
libzonarosa/rust/bridge/shared/types/src/net/: cdsi.rs  chat.rs  registration.rs  (+3 more)
libzonarosa/rust/cli-utils/: Cargo.toml
libzonarosa/rust/cli-utils/src/: args.rs  lib.rs
libzonarosa/rust/keytrans/: Cargo.toml  build.rs
libzonarosa/rust/keytrans/benches/: verify.rs
libzonarosa/rust/keytrans/src/: commitments.rs  guide.rs  implicit.rs  left_balanced.rs  lib.rs  log.rs  prefix.rs  proto.rs  verify.rs  vrf.rs
libzonarosa/rust/keytrans/src/proto/: chat.proto  store.proto  wire.proto
libzonarosa/rust/net/: Cargo.toml  build.rs
libzonarosa/rust/net/chat/: Cargo.toml
libzonarosa/rust/net/chat/examples/: fetch_profile_key_credential.rs  look_up_username.rs
libzonarosa/rust/net/chat/src/: api.rs  grpc.rs  lib.rs  logging.rs  registration.rs  ws.rs
libzonarosa/rust/net/chat/src/api/: keys.rs  keytrans.rs  messages.rs  profiles.rs  registration.rs  usernames.rs
libzonarosa/rust/net/chat/src/grpc/: profiles.rs  usernames.rs
libzonarosa/rust/net/chat/src/registration/: service.rs
libzonarosa/rust/net/chat/src/ws/: keys.rs  keytrans.rs  messages.rs  profiles.rs  registration.rs  usernames.rs
libzonarosa/rust/net/examples/: cdsi_lookup.rs  chat_smoke_test.rs  dns_custom_lookup.rs  dns_over_https.rs  dns_over_udp.rs  https_proxy.rs  socks_proxy.rs  svr2_attestation.rs  svrb_test.rs
libzonarosa/rust/net/grpc/: Cargo.toml  build.rs
libzonarosa/rust/net/grpc/src/: lib.rs
libzonarosa/rust/net/infra/: Cargo.toml
libzonarosa/rust/net/infra/src/: certs.rs  dns.rs  errors.rs  host.rs  http_client.rs  lib.rs  route.rs  stream.rs  tcp_ssl.rs  timeouts.rs  utils.rs  ws.rs
libzonarosa/rust/net/infra/src/certs/: error.rs
libzonarosa/rust/net/infra/src/dns/: custom_resolver.rs  dns_errors.rs  dns_lookup.rs  dns_message.rs  dns_transport_doh.rs  dns_transport_udp.rs  dns_types.rs  dns_utils.rs  lookup_result.rs
libzonarosa/rust/net/infra/src/route/: connect.rs  describe.rs  http.rs  provider.rs  proxy.rs  resolve.rs  schedule.rs  tcp.rs  tls.rs  udp.rs  ws.rs
libzonarosa/rust/net/infra/src/tcp_ssl/: proxy.rs
libzonarosa/rust/net/infra/src/testutil/: fake_transport.rs  mod.rs
libzonarosa/rust/net/infra/src/utils/: binary_heap.rs  future.rs  oneshot_broadcast.rs
libzonarosa/rust/net/infra/src/ws/: attested.rs  connection.rs  error.rs
libzonarosa/rust/net/res/: sgx_test_server_cert.cer  zonarosa.cer
libzonarosa/rust/net/src/: auth.rs  cdsi.rs  certs.rs  chat.rs  connect_state.rs  enclave.rs  env.rs  lib.rs  proto.rs  svr.rs  svrb.rs  ws.rs
libzonarosa/rust/net/src/chat/: error.rs  fake.rs  server_requests.rs  ws.rs
libzonarosa/rust/net/src/proto/: cds2.proto  cds2.rs  chat_provisioning.proto  chat_provisioning.rs  chat_websocket.proto  chat_websocket.rs
libzonarosa/rust/net/src/svrb/: direct.rs  ppss_ops.rs  traits.rs
libzonarosa/rust/net/tests/: cdsi_connect.rs  chat_connect_timing.rs  dns_lookup.rs
libzonarosa/rust/net/tests/fake_transport/: behavior.rs  connector.rs  mod.rs
libzonarosa/rust/net/tests/fake_transport/connector/: replace.rs
libzonarosa/rust/protocol/cross-version-testing/: Cargo.toml
libzonarosa/rust/protocol/cross-version-testing/src/: current.rs  lib.rs  v70.rs
libzonarosa/rust/protocol/cross-version-testing/tests/: sealed_sender.rs  session.rs
libzonarosa/rust/protocol/test-support/: Cargo.toml
libzonarosa/rust/protocol/test-support/src/: lib.rs
(+11521 files in other folders)
