#
# Copyright (C) 2020-2021 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "libzonarosa-jni"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
name = "zonarosa_jni"
crate-type = ["cdylib"]

[dependencies]
libzonarosa-jni-impl = { workspace = true }
