#
# Copyright (C) 2020-2021 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "libzonarosa-node"
version.workspace = true
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
name = "zonarosa_node"
crate-type = ["cdylib"]

[dependencies]
libzonarosa-bridge = { workspace = true, features = ["node", "zonarosa-media"] }
libzonarosa-bridge-testing = { workspace = true, features = ["node", "zonarosa-media"] }
libzonarosa-protocol = { workspace = true }

futures = { workspace = true }
log = { workspace = true }
log-panics = { workspace = true, features = ["with-backtrace"] }
minidump = { workspace = true }
minidump-processor = { workspace = true }
minidump-unwind = { workspace = true }
neon = { workspace = true, features = ["napi-6"] }
