#
# Copyright (C) 2023 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "libzonarosa-protocol-cross-version-testing"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.4"
futures-util = "0.3.7"
log = "0.4"
rand = "0.9"
rand_v7 = { package = "rand", version = "0.7" }
rand_v8 = { package = "rand", version = "0.8" }
uuid = "1.0"

libzonarosa-protocol-current = { path = "..", package = "libzonarosa-protocol" }
libzonarosa-protocol-v70 = { git = "https://github.com/zonarosa/libzonarosa", tag = "v0.70.0", package = "libzonarosa-protocol" }

# Prevent this crate from being included in the top-level workspace
[workspace]
members = ["."]
