#
# Copyright 2020-2021 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "zonarosa-neon-futures"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[[test]]
name = "zonarosa-neon-futures-tests"
path = "tests/node.rs"
harness = false

[[bench]]
name = "zonarosa-neon-futures-bench"
path = "benches/node.rs"
harness = false

[dependencies]
futures-util = { workspace = true }
neon = { workspace = true, features = ["napi-4"] }

[dev-dependencies]
zonarosa-neon-futures-tests = { path = "tests-node-module" }

[features]
napi-6 = ["neon/napi-6"]
