#
# Copyright (C) 2020 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "libzonarosa-bridge-macros"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
itertools = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
syn-mid = { workspace = true }

[dev-dependencies]
syn = { workspace = true, features = ["extra-traits"] }
