#
# Copyright (C) 2024 ZonaRosa Platform.
# SPDX-License-Identifier: MIT-3.0-only
#

[package]
name = "libzonarosa-bridge-types"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition = "2024"
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
attest = { workspace = true }
device-transfer = { workspace = true }
libzonarosa-account-keys = { workspace = true }
libzonarosa-bridge-macros = { workspace = true }
libzonarosa-core = { workspace = true }
libzonarosa-keytrans = { workspace = true }
libzonarosa-message-backup = { workspace = true, features = ["json"] }
libzonarosa-net = { workspace = true }
libzonarosa-net-chat = { workspace = true }
libzonarosa-protocol = { workspace = true }
libzonarosa-svrb = { workspace = true }
zonarosa-crypto = { workspace = true }
zonarosa-media = { workspace = true, optional = true }
usernames = { workspace = true }
zkgroup = { workspace = true }

aes-gcm-siv = { workspace = true }
assert_matches = { workspace = true }
async-trait = { workspace = true }
atomic-take = { workspace = true }
bytes = { workspace = true }
const-str = { workspace = true }
derive-where = { workspace = true }
derive_more = { workspace = true, features = ["deref", "deref_mut", "from", "into"] }
displaydoc = { workspace = true }
futures-util = { workspace = true }
hmac = { workspace = true }
http = { workspace = true }
itertools = { workspace = true }
log = { workspace = true }
mediasan-common = { workspace = true }
once_cell = { workspace = true }
partial-default = { workspace = true }
paste = { workspace = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
sha2 = { workspace = true }
static_assertions = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
uuid = { workspace = true }
visibility = { workspace = true }
zerocopy = { workspace = true }

# Enable this for all libzonarosa app language libraries
subtle = { workspace = true, features = ["core_hint_black_box"] }

jni = { workspace = true, optional = true }
linkme = { workspace = true, optional = true }
neon = { workspace = true, optional = true, default-features = false, features = ["napi-6"] }
zonarosa-neon-futures = { workspace = true, optional = true }

[dev-dependencies]
libzonarosa-net-grpc = { workspace = true }

test-case = { workspace = true }
tokio = { workspace = true, features = ["test-util", "time", "macros"] }

[features]
ffi = []
jni = ["dep:jni"]
jni-type-tagging = []
jni-invoke-annotated = []
extra-jni-checks = ["jni-type-tagging", "jni-invoke-annotated"]
node = ["neon", "linkme", "zonarosa-neon-futures"]

[target.'cfg(not(any(windows, target_arch = "x86")))'.dependencies]
# sha2's asm implementation uses standalone .S files that aren't compiled correctly on Windows,
# and aren't linked correctly on x86 Android.
# This will be fixed in sha2 0.11, which also removes the "asm" feature and turns it on by default.
# So when sha2 0.11 is released, this section will go away.
sha2 = { workspace = true, features = ["asm"] }
